Fix Pricing and db route

--- a/Views/CoffeeOrder/Add.cshtml
+++ b/Views/CoffeeOrder/Add.cshtml
@@ -23,12 +23,12 @@
                     <label class="form-label">Coffee Type</label>
                     <select class="form-select" asp-for="CoffeeType" required>
                         <option value="">Choose your coffee...</option>
-                        <option value="Espresso">Espresso - ₱120</option>
+                        <option value="Sea Salt Latte">Sea Salt Latte - ₱180</option>
                         <option value="Americano">Americano - ₱140</option>
-                        <option value="Latte">Latte - ₱180</option>
-                        <option value="Cappuccino">Cappuccino - ₱180</option>
-                        <option value="Mocha">Mocha - ₱200</option>
-                        <option value="Macchiato">Macchiato - ₱160</option>
+                        <option value="Matcha Latte">Matcha Latte - ₱180</option>
+                        <option value="Cappuccino">Cappuccino - ₱150</option>
+                        <option value="Mocha">Mocha - ₱150</option>
+                        <option value="Caramel Macchiato">Caramel Macchiato - ₱170</option>
                     </select>
                 </div>
                 <div class="col-md-6 mb-3">
