--- a/Views/CoffeeOrder/Edit.cshtml
+++ b/Views/CoffeeOrder/Edit.cshtml
@@ -35,12 +35,13 @@
                 <div class="col-md-6 mb-3">
                     <label class="form-label">Coffee Type</label>
                     <select class="form-select" asp-for="CoffeeType" required>
-                        <option value="Espresso">Espresso</option>
-                        <option value="Americano">Americano</option>
-                        <option value="Latte">Latte</option>
-                        <option value="Cappuccino">Cappuccino</option>
-                        <option value="Mocha">Mocha</option>
-                        <option value="Macchiato">Macchiato</option>
+                        <option value="">Choose your coffee...</option>
+                        <option value="Sea Salt Latte">Sea Salt Latte - ₱180</option>
+                        <option value="Americano">Americano - ₱140</option>
+                        <option value="Matcha Latte">Matcha Latte - ₱180</option>
+                        <option value="Cappuccino">Cappuccino - ₱150</option>
+                        <option value="Mocha">Mocha - ₱150</option>
+                        <option value="Caramel Macchiato">Caramel Macchiato - ₱170</option>
                     </select>
                 </div>
                 <div class="col-md-6 mb-3">
